--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
             <strong>2017-2021</strong><br />
             GéoMaître<br />
             <span class="small">
-              <i>Collège de Tourisme et Services Hôteliers</i>
+              <i
+                >Collège de Tourisme et Services Hôteliers - St. Pétersbourg
+                Diplôme obtenu BAC+4</i
+              >
             </span>
           </p>
         </div>
