Trigger GitHub Pages rebuild

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <span class="small">
               <i
                 >Collège de Tourisme et Services Hôteliers - St. Pétersbourg
-                Diplôme obtenu BAC+4
-              </i>
+                Diplôme obtenu BAC+4</i
+              >
             </span>
           </p>
         </div>
