--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV Aleksandr Semenov</title>
+    <title>CV Aleksandr SENENOV</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -48,7 +48,7 @@
 
           <p>
             <strong>2017 – 2021</strong><br />
-            Agent Immobilier<br />
+            GéoMaître<br />
             <span class="small"
               >Collège de Tourisme et Services Hôteliers - St. Pétersbourg<br />
               Diplôme obtenu BAC+4</span
