--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <div class="section competences">
           <h2>COMPÉTENCES</h2>
           <ul>
-            <li>
-              <strong>Front-end :</strong> JScript, Angular (Flexbox, Grid)
-            </li>
+            <li><strong>Front-end :</strong> JScript, Angular (Flexbox)</li>
             <li><strong>Back-end :</strong> Node.js, REST API</li>
             <li><strong>Langages :</strong> HTML / CSS · PHP · C#</li>
             <li><strong>Bases de données :</strong> MySQL · MongoDB</li>
