--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="CV d'Aleksandr Semenov" />
-
+    <meta
+      name="description"
+      content="CV de Aleksandr SENENOV, développeur web en formation."
+    />
     <title>CV Aleksandr SENENOV</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
