--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="CV de Aleksandr SENENOV, développeur web en formation."
     />
+    <meta name="author" content="Aleksandr SENENOV" />
     <title>CV Aleksandr SENENOV</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
