--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
             >
           </p>
         </div>
+        <div class="section contact">
+          <h2>CONTACT</h2>
+          <p>📧 zxcalk@gmail.com</p>
+          <p>📞 07 45 44 93 90</p>
+          <p>📍 Fréjus</p>
+        </div>
       </aside>
 
       <main class="main">
