--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Description de la page" />
     <meta name="robots" content="index, follow" />
     <title>CV SEMENOV</title>
-    <link rel="icon" href="image/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <canvas id="bg-canvas"></canvas>
+    <!-- <canvas id="bg-canvas"></canvas> -->
     <!-- ============================= -->
     <!-- Header -->
     <!-- ============================= -->
