--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- <canvas id="bg-canvas"></canvas> -->
+    <!-- <canvas id="bg-canvas"></canvas>  -->
+
     <!-- ============================= -->
     <!-- Header -->
     <!-- ============================= -->
@@ -35,7 +36,7 @@
           <li>
             <a href="#about">
               <img src="img/about-icon.png" alt="À propos" />
-              <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;À PROPOS</span>
+              <span>À PROPOS</span>
             </a>
           </li>
           <li>
