--- a/index.html
+++ b/index.html
@@ -29,37 +29,37 @@
         <ul>
           <li>
             <a href="#about">
-              <img src="img/about-icon.png" alt="À propos" />
+              <img src="img/about-icon.png" alt="À PROPOS" />
               <span>À PROPOS</span>
             </a>
           </li>
           <li>
             <a href="#competences">
-              <img src="img/skills-icon.png" alt="Compétences" />
+              <img src="img/skills-icon.png" alt="COMPÉTENCES" />
               <span>COMPÉTENCES</span>
             </a>
           </li>
           <li>
             <a href="#formation">
-              <img src="img/edu-icon.png" alt="Formation" />
+              <img src="img/edu-icon.png" alt="FORMATION" />
               <span>FORMATION</span>
             </a>
           </li>
           <li>
             <a href="#experience">
-              <img src="img/exp-icon.png" alt="Expérience" />
+              <img src="img/exp-icon.png" alt="EXPÉRIENCE" />
               <span>EXPÉRIENCE</span>
             </a>
           </li>
           <li>
             <a href="#interests">
-              <img src="img/interests-icon.png" alt="Centres d’intérêt" />
+              <img src="img/interests-icon.png" alt="CENTRES D’INTÉRÊT" />
               <span>CENTRES D’INTÉRÊT</span>
             </a>
           </li>
           <li>
             <a href="#contact">
-              <img src="img/contact-icon.png" alt="Contact" />
+              <img src="img/contact-icon.png" alt="CONTACT" />
               <span>CONTACT</span>
             </a>
           </li>
