--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- <canvas id="bg-canvas"></canvas>  -->
+    <canvas id="bg-canvas"></canvas>
 
     <!-- ============================= -->
     <!-- Header -->
