recolor of site

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
         <section>
           <h2 class="section-title">Bienvenue sur mon CV</h2>
           <p class="section-text">
-            Je suis un développeur web passionné par la création de sites
-            internet et web applications.
+            Actuellement en formation Web & Web Mobile pour l’obtention de mon
+            titre professionnel, je recherche un stage du 27 octobre au 5
+            décembre 2025
           </p>
         </section>
       </div>
@@ -122,35 +123,11 @@
       </div>
 
       <!-- ============================= -->
-      <!-- Education Section -->
-      <!-- ============================= -->
-      <div class="section-wrapper" id="formation">
-        <section>
-          <h2 class="section-title">Formation</h2>
-          <div class="edu-item">
-            <p class="edu-year"><strong>2025 – 2026</strong></p>
-            <p class="edu-title">Développeur Web</p>
-            <p class="edu-subtitle">
-              formation développeur web et web mobile - Fréjus
-            </p>
-          </div>
-          <div class="edu-item">
-            <p class="edu-year"><strong>2017 – 2021</strong></p>
-            <p class="edu-title">GéoMaître</p>
-            <p class="edu-subtitle">
-              Collège de Tourisme et Services Hôteliers - St. Pétersbourg<br />
-              Diplôme obtenu BAC+4
-            </p>
-          </div>
-        </section>
-      </div>
-
-      <!-- ============================= -->
       <!-- Experience Section -->
       <!-- ============================= -->
       <div class="section-wrapper" id="experience">
         <section>
-          <h2 class="section-title">Expérience</h2>
+          <h2 class="section-title">Expériences</h2>
 
           <div class="exp-item">
             <p>
@@ -185,7 +162,7 @@
               ><br />
               <span class="exp-role">Alternance – Cuisinier</span><br />
               <span class="exp-company"
-                >restaurants divers, St. Pétersbourg</span
+                >Restaurants divers, St. Pétersbourg</span
               >
             </p>
             <ul>
@@ -198,6 +175,29 @@
                 aux process et procédures.
               </li>
             </ul>
+          </div>
+        </section>
+      </div>
+      <!-- ============================= -->
+      <!-- Education Section -->
+      <!-- ============================= -->
+      <div class="section-wrapper" id="formation">
+        <section>
+          <h2 class="section-title">Formations</h2>
+          <div class="edu-item">
+            <p class="edu-year"><strong>2025 – 2026</strong></p>
+            <p class="edu-title">Développeur Web</p>
+            <p class="edu-subtitle">
+              Formation développeur web et web mobile - Fréjus
+            </p>
+          </div>
+          <div class="edu-item">
+            <p class="edu-year"><strong>2017 – 2021</strong></p>
+            <p class="edu-title">GéoMaître</p>
+            <p class="edu-subtitle">
+              Collège de Tourisme et Services Hôteliers - St. Pétersbourg<br />
+              Diplôme obtenu BAC+4
+            </p>
           </div>
         </section>
       </div>
