--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Description de la page" />
+    <meta name="description" content="CV d'SEMENOV Aleksandr" />
     <meta name="robots" content="index, follow" />
     <title>CV SEMENOV</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
