change color theme

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <script>
       const rootStyles = getComputedStyle(document.documentElement);
       // --pink-5 (#E32BD7)
-      const accentHex = rootStyles.getPropertyValue("--pink-5").trim();
+      const accentHex = rootStyles.getPropertyValue("--mood-4").trim();
       function hexToRgba(hex, alpha = 1) {
         const bigint = parseInt(hex.slice(1), 16);
         const r = (bigint >> 16) & 255;
