theme change + nowarp

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li>
             <a href="#about">
               <img src="img/about-icon.webp" alt="" />
-              <span>À PROPOS</span>
+              <span class="nav-no-wrap">À PROPOS</span>
             </a>
           </li>
           <li>
