--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li>
             <a href="#interests">
               <img src="img/interests-icon.webp" alt="" />
-              <span>HOBBY</span>
+              <span>HOBBIES</span>
             </a>
           </li>
           <li>
