--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <h1>SEMENOV Aleksandr</h1>
         <h2>DÉVELOPPEUR WEB</h2>
       </div>
+      <a
+        href="cv/cv.pdf"
+        download
+        class="btn-download-cv"
+        aria-label="Télécharger CV en PDF"
+      >
+        Télécharger CV
+      </a>
 
       <!-- ============================= -->
 
