--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           <li>
             <a href="#formation">
               <img src="img/edu-icon.webp" alt="" />
-              <span>FORMATION</span>
+              <span>FORMATIONS</span>
             </a>
           </li>
           <li>
             <a href="#experience">
               <img src="img/exp-icon.webp" alt="" />
-              <span>EXPÉRIENCE</span>
+              <span>EXPÉRIENCES</span>
             </a>
           </li>
           <li>
