--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <button class="nav-toggle" aria-label="open menu">☰</button>
         <ul>
           <li>
-            <a href="#about">
+            <a href="about.html">
               <img src="img/about-icon.webp" alt="" />
               <span class="nav-no-wrap">À PROPOS</span>
             </a>
           </li>
           <li>
-            <a href="#competences">
+            <a href="projects.html">
               <img src="img/skills-icon.webp" alt="" />
-              <span>COMPÉTENCES</span>
+              <span>PROJETS</span>
             </a>
           </li>
           <li>
@@ -67,7 +67,7 @@
             </a>
           </li>
           <li>
-            <a href="#contact">
+            <a href="contact.html">
               <img src="img/contact-icon.webp" alt="" />
               <span>CONTACT</span>
             </a>
@@ -88,23 +88,6 @@
             Actuellement en formation Web & Web Mobile pour l’obtention de mon
             titre professionnel, je recherche un stage du 27 octobre au 5
             décembre 2025
-          </p>
-        </section>
-      </div>
-
-      <!-- ============================= -->
-      <!-- About Section -->
-      <!-- ============================= -->
-      <div class="section-wrapper" id="about">
-        <section>
-          <h2 class="section-title">À propos de moi</h2>
-          <p class="section-text">
-            Développeur Web en formation Web & Web Mobile, je suis actuellement
-            à la recherche d’un stage afin d’appliquer et d’approfondir mes
-            compétences techniques. Rigoureux et orienté utilisateur, je
-            souhaite concevoir, développer et déployer des sites et applications
-            performants tout en poursuivant ma montée en compétences durant ma
-            formation.
           </p>
         </section>
       </div>
@@ -255,108 +238,6 @@
     <!-- ============================= -->
     <button id="toTopBtn" title="Vers le haut">↑</button>
 
-    <script>
-      const btn = document.getElementById("toTopBtn");
-      window.onscroll = function () {
-        btn.style.display = window.scrollY > 200 ? "block" : "none";
-      };
-      btn.onclick = function () {
-        window.scrollTo({ top: 0, behavior: "smooth" });
-      };
-    </script>
-    <script>
-      const navbar = document.querySelector(".navbar");
-      const toggle = document.querySelector(".nav-toggle");
-      toggle.addEventListener("click", () => {
-        navbar.classList.toggle("open");
-      });
-    </script>
-    <script>
-      const rootStyles = getComputedStyle(document.documentElement);
-      // --pink-5 (#E32BD7)
-      const accentHex = rootStyles.getPropertyValue("--mood-4").trim();
-      function hexToRgba(hex, alpha = 1) {
-        const bigint = parseInt(hex.slice(1), 16);
-        const r = (bigint >> 16) & 255;
-        const g = (bigint >> 8) & 255;
-        const b = bigint & 255;
-        return `rgba(${r}, ${g}, ${b}, ${alpha})`;
-      }
-
-      // Canvas setup
-      const canvas = document.getElementById("bg-canvas");
-      const ctx = canvas.getContext("2d");
-      let width, height;
-      const NODE_COUNT = 60,
-        MAX_DISTANCE = 120,
-        NODE_RADIUS = 2,
-        SPEED = 0.4;
-      let nodes = [];
-
-      function resizeCanvas() {
-        width = canvas.clientWidth;
-        height = canvas.clientHeight;
-        canvas.width = width;
-        canvas.height = height;
-      }
-      window.addEventListener("resize", resizeCanvas);
-      resizeCanvas();
-
-      class Node {
-        constructor() {
-          this.x = Math.random() * width;
-          this.y = Math.random() * height;
-          this.vx = (Math.random() * 2 - 1) * SPEED;
-          this.vy = (Math.random() * 2 - 1) * SPEED;
-        }
-        move() {
-          this.x += this.vx;
-          this.y += this.vy;
-          if (this.x <= 0 || this.x >= width) this.vx *= -1;
-          if (this.y <= 0 || this.y >= height) this.vy *= -1;
-        }
-      }
-
-      function initNodes() {
-        nodes = [];
-        for (let i = 0; i < NODE_COUNT; i++) {
-          nodes.push(new Node());
-        }
-      }
-      initNodes();
-
-      function animate() {
-        ctx.clearRect(0, 0, width, height);
-
-        for (let i = 0; i < nodes.length; i++) {
-          for (let j = i + 1; j < nodes.length; j++) {
-            const dx = nodes[i].x - nodes[j].x;
-            const dy = nodes[i].y - nodes[j].y;
-            const dist = Math.hypot(dx, dy);
-            if (dist < MAX_DISTANCE) {
-              const opacity = (1 - dist / MAX_DISTANCE) * 0.6;
-              ctx.strokeStyle = hexToRgba(accentHex, opacity);
-              ctx.lineWidth = 1;
-              ctx.beginPath();
-              ctx.moveTo(nodes[i].x, nodes[i].y);
-              ctx.lineTo(nodes[j].x, nodes[j].y);
-              ctx.stroke();
-            }
-          }
-        }
-
-        ctx.fillStyle = hexToRgba(accentHex, 0.8);
-        for (let node of nodes) {
-          ctx.beginPath();
-          ctx.arc(node.x, node.y, NODE_RADIUS, 0, Math.PI * 2);
-          ctx.fill();
-          node.move();
-        }
-
-        requestAnimationFrame(animate);
-      }
-
-      animate();
-    </script>
+    <script src="js/main.js"></script>
   </body>
 </html>
