--- a/projects.html
+++ b/projects.html
@@ -119,6 +119,10 @@
               </a>
             </div>
           </div>
+          <!-- Bouton vers les futurs projets -->
+          <div style="text-align: center; margin-top: 2rem">
+            <a href="future.html" class="btn-link"> Mes projets à venir → </a>
+          </div>
         </section>
       </div>
     </main>
