--- a/contact.html
+++ b/contact.html
@@ -33,28 +33,25 @@
           <li>
             <a href="index.html">
               <img src="img/exp-icon.webp" alt="" />
-              <span class="nav-no-wrap">Accueil</span></a
-            >
+              <span class="nav-no-wrap">Accueil</span>
+            </a>
           </li>
           <li>
             <a href="about.html">
               <img src="img/about-icon.webp" alt="" />
-              <span class="nav-no-wrap">À PROPOS</span></a
-            >
+              <span class="nav-no-wrap">À PROPOS</span>
+            </a>
           </li>
-          <li>
-            <a href="contact.html" class="active"
-              ><img src="img/contact-icon.webp" alt="" /><span
-                class="nav-no-wrap"
-                >CONTACT</span
-              ></a
-            >
-          </li>
-
           <li>
             <a href="projects.html">
               <img src="img/skills-icon.webp" alt="" />
               <span>PROJETS</span>
+            </a>
+          </li>
+          <li>
+            <a href="contact.html" class="active">
+              <img src="img/contact-icon.webp" alt="" />
+              <span class="nav-no-wrap">CONTACT</span>
             </a>
           </li>
         </ul>
