--- a/ai.html
+++ b/ai.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="À propos de SEMENOV Aleksandr" />
+    <meta
+      name="description"
+      content="Détails sur la création de mes projets IA"
+    />
     <meta name="robots" content="index, follow" />
-    <title>À propos | SEMENOV Aleksandr</title>
+    <title>Création d'IA | SEMENOV Aleksandr</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -36,13 +39,13 @@
             </a>
           </li>
           <li>
-            <a href="about.html" class="active">
+            <a href="about.html">
               <img src="img/about-icon.webp" alt="" />
               <span class="nav-no-wrap">À PROPOS</span>
             </a>
           </li>
           <li>
-            <a href="projects.html">
+            <a href="projects.html" class="active">
               <img src="img/skills-icon.webp" alt="" />
               <span>PROJETS</span>
             </a>
@@ -58,17 +61,17 @@
     </header>
 
     <main>
-      <!-- Section À propos -->
-      <div class="section-wrapper" id="about">
+      <!-- Section Création d'IA -->
+      <div class="section-wrapper" id="creation-ia">
         <section>
-          <h2 class="section-title">À propos de moi</h2>
+          <h2 class="section-title">Informatique &amp; IA</h2>
           <p class="section-text">
-            Développeur Web en formation Web & Web Mobile, je suis actuellement
-            à la recherche d’un stage afin d’appliquer et d’approfondir mes
-            compétences techniques. Rigoureux et orienté utilisateur, je
-            souhaite concevoir, développer et déployer des sites et applications
-            performants tout en poursuivant ma montée en compétences durant ma
-            formation.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci,
+            facilis. Id deleniti velit enim ipsum ab repellendus perferendis
+            quidem. Ducimus dolores quos eaque eos adipisci dolorum veritatis
+            consequuntur quae modi sapiente perferendis explicabo obcaecati
+            similique nihil repellendus, laboriosam, illo enim molestias a,
+            quibusdam laudantium id esse. Et, similique. Recusandae, beatae.
           </p>
         </section>
       </div>
@@ -95,7 +98,9 @@
                 Depuis 2018, je m’intéresse aux intelligences artificielles,
                 débutant avec OpenAI et poursuivant sans cesse mes découvertes.
               </p>
-              <a href="ai.html" class="btn-link">En savoir plus</a>
+              <button class="btn-link" disabled aria-disabled="true">
+                En savoir plus
+              </button>
             </article>
 
             <!-- 3. Test de jeux & mods -->
