--- a/bots.html
+++ b/bots.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="À propos de SEMENOV Aleksandr" />
+    <meta name="description" content="Détails sur la création de mes bots" />
     <meta name="robots" content="index, follow" />
-    <title>À propos | SEMENOV Aleksandr</title>
+    <title>Création de bots | SEMENOV Aleksandr</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li>
-            <a href="about.html" class="active">
+            <a href="about.html">
               <img src="img/about-icon.webp" alt="" />
               <span class="nav-no-wrap">À PROPOS</span>
             </a>
@@ -58,17 +58,15 @@
     </header>
 
     <main>
-      <!-- Section À propos -->
-      <div class="section-wrapper" id="about">
+      <!-- Section Création de bots -->
+      <div class="section-wrapper" id="creation-bots">
         <section>
-          <h2 class="section-title">À propos de moi</h2>
+          <h2 class="section-title">Création de bots</h2>
           <p class="section-text">
-            Développeur Web en formation Web & Web Mobile, je suis actuellement
-            à la recherche d’un stage afin d’appliquer et d’approfondir mes
-            compétences techniques. Rigoureux et orienté utilisateur, je
-            souhaite concevoir, développer et déployer des sites et applications
-            performants tout en poursuivant ma montée en compétences durant ma
-            formation.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, id
+            accusantium. Dolores veniam ea laborum? Itaque consequatur, saepe
+            sed, libero autem dignissimos repudiandae recusandae earum ipsam
+            sapiente possimus dolor veniam!
           </p>
         </section>
       </div>
@@ -85,7 +83,9 @@
                 Depuis mon enfance, j’adore concevoir divers bots : j’ai
                 commencé à en développer à l’âge de 6 ans.
               </p>
-              <a href="bots.html" class="btn-link">En savoir plus</a>
+              <button class="btn-link" disabled aria-disabled="true">
+                En savoir plus
+              </button>
             </article>
 
             <!-- 2. Informatique & IA -->
