--- a/tester.html
+++ b/tester.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="À propos de SEMENOV Aleksandr" />
+    <meta name="description" content="Détails sur mes tests de jeux et mods" />
     <meta name="robots" content="index, follow" />
-    <title>À propos | SEMENOV Aleksandr</title>
+    <title>Test de jeux &amp; mods | SEMENOV Aleksandr</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li>
-            <a href="about.html" class="active">
+            <a href="about.html">
               <img src="img/about-icon.webp" alt="" />
               <span class="nav-no-wrap">À PROPOS</span>
             </a>
@@ -58,17 +58,15 @@
     </header>
 
     <main>
-      <!-- Section À propos -->
-      <div class="section-wrapper" id="about">
+      <!-- Section Test de jeux & mods -->
+      <div class="section-wrapper" id="test-mods">
         <section>
-          <h2 class="section-title">À propos de moi</h2>
+          <h2 class="section-title">Test de jeux &amp; mods</h2>
           <p class="section-text">
-            Développeur Web en formation Web & Web Mobile, je suis actuellement
-            à la recherche d’un stage afin d’appliquer et d’approfondir mes
-            compétences techniques. Rigoureux et orienté utilisateur, je
-            souhaite concevoir, développer et déployer des sites et applications
-            performants tout en poursuivant ma montée en compétences durant ma
-            formation.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id vitae
+            sed voluptas beatae dolorum cumque magni, odit harum architecto
+            accusantium ad officiis omnis eaque quidem distinctio reprehenderit
+            veritatis quas ipsa?
           </p>
         </section>
       </div>
@@ -105,7 +103,9 @@
                 À partir de 2016, j’ai développé une passion de testeur de mods
                 de jeux, apprenant à gérer Trello et Jira.
               </p>
-              <a href="tester.html" class="btn-link">En savoir plus</a>
+              <button class="btn-link" disabled aria-disabled="true">
+                En savoir plus
+              </button>
             </article>
           </div>
         </section>
