--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           <li>
             <a href="index.html">
               <img src="img/exp-icon.webp" alt="" />
-              <span class="nav-no-wrap">Accueil</span>
+              <span class="nav-no-wrap">ACCUEIL</span>
             </a>
           </li>
           <li>
