--- a/future.html
+++ b/future.html
@@ -8,6 +8,7 @@
     <title>Projets à venir | SEMENOV Aleksandr</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
