--- a/tester.html
+++ b/tester.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Détails sur mes tests de jeux et mods" />
-    <meta name="robots" content="index, follow" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Détails sur mes tests de jeux et mods">
+    <meta name="robots" content="index, follow">
     <title>Test de jeux &amp; mods | SEMENOV Aleksandr</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <canvas id="bg-canvas"></canvas>
@@ -27,29 +27,29 @@
       </a>
 
       <nav class="navbar">
-        <button class="nav-toggle" aria-label="open menu">☰</button>
+        <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
         <ul>
           <li>
             <a href="index.html">
-              <img src="img/exp-icon.webp" alt="" />
+              <img src="img/exp-icon.webp" alt="Accueil">
               <span class="nav-no-wrap">ACCUEIL</span>
             </a>
           </li>
           <li>
             <a href="about.html">
-              <img src="img/about-icon.webp" alt="" />
+              <img src="img/about-icon.webp" alt="À propos">
               <span class="nav-no-wrap">À PROPOS</span>
             </a>
           </li>
           <li>
             <a href="projects.html">
-              <img src="img/skills-icon.webp" alt="" />
+              <img src="img/skills-icon.webp" alt="Projets">
               <span>PROJETS</span>
             </a>
           </li>
           <li>
             <a href="contact.html">
-              <img src="img/contact-icon.webp" alt="" />
+              <img src="img/contact-icon.webp" alt="Contact">
               <span class="nav-no-wrap">CONTACT</span>
             </a>
           </li>
@@ -71,7 +71,7 @@
         </section>
       </div>
 
-      <!-- Nouveaux articles d'intérêt -->
+      <!-- Nouveaux articles d’intérêt -->
       <div class="section-wrapper">
         <section>
           <h2 class="section-title">Mes centres d’intérêt</h2>
