--- a/tester.html
+++ b/tester.html
@@ -103,7 +103,7 @@
                 À partir de 2016, j’ai développé une passion de testeur de mods
                 de jeux, apprenant à gérer Trello et Jira.
               </p>
-              <button class="btn-link" disabled aria-disabled="true">
+              <button class="btn-link" type="button" disabled aria-disabled="true">
                 En savoir plus
               </button>
             </article>
